tests/fixtures/invalid/w001/orphan_behavior.spec
behavior lonely_behavior "Lonely" {
  contract """this behavior is not referenced by any feature"""
  verify unit "test it"
}
